--- a/src/pages/components.astro
+++ b/src/pages/components.astro
@@ -8,7 +8,7 @@ import Layout from "@/layouts/layout.astro";
     <div
       class="inset-0 absolute -z-10 grid grid-cols-4 bg-background grid-rows-2 gap-px"
     >
-      {Array.from({ length: 8 }).map((_, index) => <div class="bg-muted/20" />)}
+      {Array.from({ length: 8 }).map((_) => <div class="bg-muted/20" />)}
     </div>
 
     <div class="flex size-full items-center justify-center scale-150">
