add links to pdf print

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -109,8 +109,9 @@ import { ModeToggle } from "@/components/mode-toggle";
           class="flex items-center gap-x-1"
           href="https://brandcloud.pro/"
           target="_blank"
-          >BrandCloud.pro <span class="text-muted print:hidden text-sm">↗</span
-          >
+        >
+          BrandCloud.pro
+          <span class="text-muted text-sm">↗</span>
         </a>
       </h3>
       <p class="text-muted text-sm">
@@ -161,7 +162,7 @@ import { ModeToggle } from "@/components/mode-toggle";
           href="https://csas-devops.vercel.app/"
           target="_blank"
           >Česká spořitelna DevOps hackathon portal
-          <span class="text-muted print:hidden text-sm">↗</span>
+          <span class="text-muted text-sm">↗</span>
         </a>
       </h3>
       <p class="text-muted text-sm">
@@ -196,7 +197,7 @@ import { ModeToggle } from "@/components/mode-toggle";
           href="https://rezervace.kampapark.com/"
           target="_blank"
           >Restaurant reservation system
-          <span class="text-muted print:hidden text-sm">↗</span>
+          <span class="text-muted text-sm">↗</span>
         </a>
       </h3>
       <p class="text-muted text-sm">
