--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -51,7 +51,7 @@ const ogUrl = new URL("/og.png", Astro.url);
       class="max-w-screen-sm print:hidden px-4 mx-auto h-16 flex items-center justify-between"
     >
       <a href="/">
-        <Star className="h-6 fill-foreground" />
+        <Star className="h-6" />
       </a>
       <div class="flex items-center gap-x-2">
         <!-- <a
